# numerics-lab8

./: .gitignore  Cargo.toml  README.md  justfile
src/: error.rs  main.rs  pt1.rs  pt2.rs
task/: defence8.docx  lab8.docm
